Lots of stuff, see notes.
 - Unity - Changed brain type to external.
 - Added logging to SnakeAIAgent for debug while running built session.
 - SnakeAI.py
    - Added main docstring.
    - Added function to get brain info from the JSON file.
    - Small re-structuring.
    - Added BrainInfo retrieval.

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,11 @@ ExportedObj/
 *.booproj
 *.sublime-workspace
 *.sublime-project
+
 WinPixEventRuntime.dll
 SnakeAI.exe
 UnityPlayer.dll
 Links to Remember.txt
+log.txt
+brain_info.txt
+log.txt.txt
